Update 21 자바스크립트 과제.html

--- a/1차과제/03/21 자바스크립트 과제.html
+++ b/1차과제/03/21 자바스크립트 과제.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="mint" style="width:500px; height:200px">
+    <div class="mint">
         <h1>민트</h1>
     </div>
-    <div class="blue" style="width:500px; height:200px">
+    <div class="blue">
         <h1>블루</h1>
     </div>
 
@@ -21,7 +21,11 @@
         블루박스 = document.querySelector(".blue")
 
         민트박스.style.backgroundColor = "aquamarine"
+        민트박스.style.width = "500px"
+        민트박스.style.height = "200px"
         블루박스.style.backgroundColor = "skyblue" 
+        블루박스.style.width = "500px"
+        블루박스.style.height = "200px"
     </script>
 
 </body>
