0324웹개발 과제

--- a/1차과제/03/24 웹개발 과제.html
+++ b/1차과제/03/24 웹개발 과제.html
@@ -58,6 +58,12 @@
             </article>
         </section>
     </main>
+    <hr>
+    <footer class="footer">
+        <h2>footer 태그</h2>
+        <h5>배경색, padding 넣기</h5>
+        <h4>footer 영역은 보통 맨 밑에 저작권, 연락처 등 표시</h4>
+    </footer>
  
 </body>
 </html>
