0404 웹개발 과제2

--- a/1차과제/04/0404 웹개발 과제2.html
+++ b/1차과제/04/0404 웹개발 과제2.html
@@ -97,6 +97,11 @@
             <label for="" id="private">거절 <input type="radio" name="agree" id=""></label>
         </form>
     </div>
+    
+    <br>
+    <br>
+
+    <button type="submit">주문</button> <button type="reset">주문취소</button>
 
 
 
