--- a/1차과제/04/0405 자바스크립트 과제.html
+++ b/1차과제/04/0405 자바스크립트 과제.html
@@ -20,7 +20,6 @@
     <div id="box2"><h1>박스2</h1></div>
     <div id="box3"><h1>박스3</h1></div>
     
-    
     <script>
 
         const 박스1 = document.querySelector("#box1")
@@ -33,11 +32,12 @@
 
         let 티모위치 
 
-        const 버튼 = document.querySelector("#button1")
-        버튼.addEventListener("click", function() {
+        const 버튼1 = document.querySelector("#button1")
+        버튼1.addEventListener("click", function() {
             박스1.appendChild(이미지)
             티모위치 = 1
         })
+
 
         이미지.addEventListener("mouseover", function() {
             if (티모위치 == 1) {
@@ -59,6 +59,28 @@
         })
 
     </script>
+
+    <p style="clear:both"></p>
+
+    <br>
+
+    <button id="button2">술래잡기 종료</button>
+
+    <script>
+        const 버튼2 = document.querySelector("#button2")
+        버튼2.addEventListener("click", function() {
+            박스1.removeChild(이미지)
+        })
+        버튼2.addEventListener("click", function() {
+            박스2.removeChild(이미지)
+        })
+        버튼2.addEventListener("click", function() {
+            박스3.removeChild(이미지)
+        })
+
+    </script>
+
+
 
 </body>
 </html>
