Update 0405 자바스크립트 과제.html

--- a/1차과제/04/0405 자바스크립트 과제.html
+++ b/1차과제/04/0405 자바스크립트 과제.html
@@ -30,6 +30,7 @@
         let 이미지
         이미지 = document.createElement("img")
         이미지.setAttribute("src", "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3i0Dy4AJltOdpZFER1NALcMlnxIVwmX_1fQ&usqp=CAU")
+        이미지.setAttribute("width", "300")
 
         let 티모위치 
 
