--- a/1차과제/04/0407 자바스크립트 과제.html
+++ b/1차과제/04/0407 자바스크립트 과제.html
@@ -9,7 +9,7 @@
 <body>
     
     <script>
-        document.addEventListener("keyup", function( event ) {
+        document.addEventListener("keydown", function( event ) {
             if (event.key == "w") {
                 console.log("앞으로 간다")
             }
