--- a/1차과제/04/0414 웹개발 과제.html
+++ b/1차과제/04/0414 웹개발 과제.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h2>실습</h2>
+        <h1 class="title">실습</h1>
         <ul>
             <li>홈</li>
             <li>마이페이지</li>
@@ -24,20 +24,20 @@
     
     <section>
         <div class="body-box">
-            <h3>width : 400 height : 300</h3>
+            <h2>width : 400 height : 300</h2>
             <p>"시계처럼 살아라." - 이는 시계처럼 꾸준히 가라는 것이다. 시계처럼 시간도 지켜라</p>
         </div>
         <div class="body-box">
-            <h3>width : 400 height : 300</h3>
+            <h2>width : 400 height : 300</h2>
             <p>시계는 화장실에 갖다 놔도 간다. 추워도 간다. 더운데 갖다 놔도 간다.</p>
         </div>
         <br>
         <div class="body-box">
-            <h3>width : 400 height : 300</h3>
+            <h2>width : 400 height : 300</h2>
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
         <div class="body-box">
-            <h3>width : 400 height : 300</h3>
+            <h2>width : 400 height : 300</h2>
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
     </section>
