Update 0414 웹개발 과제.html

--- a/1차과제/04/0414 웹개발 과제.html
+++ b/1차과제/04/0414 웹개발 과제.html
@@ -26,6 +26,7 @@
         <div class="body-box">
             <h2>width : 400 height : 300</h2>
             <p>"시계처럼 살아라." - 이는 시계처럼 꾸준히 가라는 것이다. 시계처럼 시간도 지켜라</p>
+            <img src="https://yt3.googleusercontent.com/BEmL6Fca7Jf7o1Sr6B5Cc4hDPkqHuaHk4ZImu3OxPZMGplSeOT_gPRaAduqWkujns68i-iyaNJM=s900-c-k-c0x00ffffff-no-rj" alt="" width="200">
         </div>
         <div class="body-box">
             <h2>width : 400 height : 300</h2>
