Update 0419 자바스크립트 과제.html

--- a/1차과제/04/0419 자바스크립트 과제.html
+++ b/1차과제/04/0419 자바스크립트 과제.html
@@ -55,7 +55,7 @@
             }
         })
 
-        박스3.addEventListener("keydown", (e) => {
+        박스3.addEventListener("keyup", (e) => {
             if (e.key == "Enter") {
                 if (박스3.value == "마르고") {
                     답3.textContent = "ok"
@@ -66,7 +66,7 @@
             }
         })
 
-        박스4.addEventListener("keydown", (e) => {
+        박스4.addEventListener("keyup", (e) => {
             if (e.key == "Enter") {
                 if (박스4.value == "닳도록") {
                     답4.textContent = "ok"
