Update 0426 자바스크립트 과제.html

--- a/1차과제/04/0426 자바스크립트 과제.html
+++ b/1차과제/04/0426 자바스크립트 과제.html
@@ -15,7 +15,7 @@
     <p>↓ ↓ ↓ ↓ ↓ 변환 ↓ ↓ ↓ ↓ ↓</p>
 
     <div class="box" style="border: 1px solid black; width:170px; height:20px; float:left;"></div>
-    <select name="" id="" style="margin-left: 8px;">
+    <select name="" id="" style="margin-left: 8px; clear:both;">
         <option value="mm">mm</option>
         <option value="inch">inch</option>
         <option value="m">m</option>
