--- a/1차과제/05/0615 트랜스폼 과제.html
+++ b/1차과제/05/0615 트랜스폼 과제.html
@@ -20,17 +20,26 @@
         <div class="box">
             <div class="item"></div>
             <div class="text">
-                <h2>플랑크톤1</h2>
+                <h2>플랑크톤2</h2>
                 <p>*****</p>
             </div>
         </div>
         <div class="box">
             <div class="item"></div>
             <div class="text">
-                <h2>플랑크톤1</h2>
+                <h2>플랑크톤3</h2>
                 <p>*****</p>
             </div>
         </div>
+    </div>
+
+    <div class="footer">
+        <h1>사용한 주요 CSS</h1>
+        <p>display : flex</p>
+        <p>overflow : hidden</p>
+        <p>opacity (0 ~ 1)</p>
+        <p>transition</p>
+        <p>transform : translate(ㅇㅇ, ㅇㅇ)</p>
     </div>
 </body>
 </html>
